# rust-vue-boilerplate

client/: package.json  pnpm-lock.yaml
server/: Cargo.toml
xtask/: Cargo.toml
