[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.9"
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
